--- a/README.pod
+++ b/README.pod
@@ -16,3 +16,34 @@ PDL::Util
 
 Convenient utility functions/methods for use with PDL.
 
+=head1 IMPORT
+
+PDL::Util does not export anything by default. The exportable symbols come in two types, functions and methods. Methods is a strange word. When importing symbols one does not import methods. In this context a 'method' is a function which expects a piddle as its first argument. 
+
+A list of symbols may be imported as usual. Tags may be imported as ':functions' and ':methods'. More interestingly if an array reference or hash reference is passed as the last item in the import list, its contents will be passed to the L<add_pdl_method> function below, in which case these functions are imported into the PDL namespace and may be used as method calls. Note, when doing this for symbols from the PDL::Util module, only those listed in the ':methods' tag may be added as a method (this is the origin of the confusing terminology). Read carefully before using this functionality.
+
+=head1 TAG :functions
+
+=head2 add_pdl_method
+
+=head1 TAG :methods
+
+Again, the FUNCTIONS provided in the method tag are not automatically methods. They simply are function which are called with a PDL object (piddle) as their first argument. This function ARE available to be imported into the PDL namespace using the L<add_pdl_method> function describe above.
+
+=head2 unroll
+
+=head2 export2d
+
+ export2d($pdl, $fh, ',');
+   -- or --
+ $pdl->export2d($fh, ',');
+
+C<export2d> may take up to 2 optional arguments, a lexical filehandle (or globref, e.g. C<\*FILE>) to write to, and a string containing a column separator. The defaults, if arguments are not given are to print to STDOUT and use a single space as the column separator. The order does not matter, the method will determine whether an argument refers to a file or not. This is done so that one may call either
+
+ $pdl->export2d($fh);
+ $pdl->export2d(',');
+
+and it will do what you mean. Unfortunately this means that unlike C<wcols> one cannot use a filename rather than a filehandle; C<export2d> would interpret the string as the column separator!
+
+The method returns the number of columns that were written.
+
