Major POD improvements, including documentation on all functions.

--- a/README.pod
+++ b/README.pod
@@ -26,11 +26,30 @@ A list of symbols may be imported as usual. Tags may be imported as ':functions'
 
 =head2 add_pdl_method
 
+ add_pdl_method({'my_method' => sub { ... });
+ $pdl->my_method 	# calls the anonymous sub on $pdl
+
+ add_pdl_method(['export2d']);
+ $pdl->export2d()	# calls 'export2d' on $pdl
+
+ add_pdl_method({'my_unroll' => 'unroll'});
+ $pdl->my_unroll()	# calls 'unroll' method on $pdl
+
+C<add_pdl_method> pushes subroutines into the PDL namespace. It takes a single argument, a reference either an array or hash. The keys of the hash reference are the method name that will be used in the call (e.g. C<$pdl->method_name>, the values are either a reference to a subroutine or a string containing the name of a method provided by L<PDL::Util>. The array reference form can only take names of C<PDL::Util> methods.
+
 =head1 TAG :methods
 
-Again, the FUNCTIONS provided in the method tag are not automatically methods. They simply are function which are called with a PDL object (piddle) as their first argument. This function ARE available to be imported into the PDL namespace using the L<add_pdl_method> function describe above.
+Again, the I<functions> provided in the method tag are not automatically methods. They simply are function which are called with a PDL object (piddle) as their first argument. This function ARE available to be imported into the PDL namespace using the L<add_pdl_method> function describe above.
 
 =head2 unroll
+
+ $AoA = unroll($pdl);
+   -- or --
+ $AoA = $pdl->unroll();
+
+L<PDL> provides a function for constructing a PDL object (piddle) from a Perl nested array, however it does not provide a tool to convert a piddle to a nested array structure. The closest function is the C<list> function, which returns the elements of the piddle as a list, i.e. a 1D flattened array. C<unroll> converts piddles to a native Perl data structure; it can be thought of as the logical inverse of the C<pdl> function in that C<pdl(unroll($pdl))> should return the original data structure, although bad values and data types may be changed. 
+
+When called as a function C<unroll> takes a single argument (the piddle to unroll). When used as a method it takes no arguments. It returns a reference to an array containing the Perl equivalent data structure. 
 
 =head2 export2d
 
@@ -46,4 +65,19 @@ C<export2d> may take up to 2 optional arguments, a lexical filehandle (or globre
 and it will do what you mean. Unfortunately this means that unlike C<wcols> one cannot use a filename rather than a filehandle; C<export2d> would interpret the string as the column separator!
 
 The method returns the number of columns that were written.
+
+=head1 SOURCE REPOSITORY
+
+L<http://github.com/jberger/PDL-Util>
+
+=head1 AUTHOR
+
+Joel Berger, E<lt>joel.a.berger@gmail.comE<gt>
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright (C) 2011 by Joel Berger
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
 
